--- a/mathsgame.html
+++ b/mathsgame.html
@@ -29,7 +29,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Maths Game</h1>
-							<span class="image fit"><img src="images/mathsgamewebsite.PNG" alt="" /></span>
+							<span class="video fit"><video controls autoplay muted src="videos/MathsGameCMD.mp4" alt="" /></span>
 							<p>Here is my first project in C#, a maths game.</p>
 							    The requirements are as follows:
 								<br>Create a Math game containing the 4 basic operations
