--- a/index.html
+++ b/index.html
@@ -60,6 +60,19 @@
 								</div>
 							</div>
 						</section>
+						<section id="two" class="wrapper style2 spotlights">
+							<section>
+								<a href="#" class="image"><img src="images/c-sharp-project.png" alt="" data-position="center center" /></a>
+								<div class="content">
+									<div class="inner">
+										<h2>Drinks Info App</h2>
+										<p>Understanding of coding practices in C# to create an Information app using API practices.</p>
+										<ul class="actions">
+											<li><a href="drinksinfo.html" class="button">Learn more</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
 						<!--
 						<section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
